﻿$Revision$
	$Author$ $Date$
	1. поправил проект, брался не тот xmldom.h
	2. вынес константы из класса Node . смысл их там хранить, да и еще статик? Плюс нет возможности
	использовать их в select case
	3. в xmldom.h whitespace заменил на более информативное ignoreWhitespace

#Revision: 1456
	#Author: ctapmex Date: 2010-03-11 20:57:34 +0500 (Чт, 11 мар 2010)
	1. из проекта VC убраны файлы, которые не влияют на проект
	2. файлы xmldom вынесены в папку проекта, для дальнейшего изменения
	3. проект переведен под юникод
	4. выделены функции для чтения аргументов запускаи т.п. 

#Revision: 1453
	#Author: ctapmex Date: 2010-03-11 15:56:41 +0500 (Чт, 11 мар 2010)
	1. скопировал проект из транка и настроил проект VC++ 2008