@@ -1,8 +1,14 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. переделал r1457 пункт 2 - константы выделены в enum NodeType. В итоге эти константы внутри класса,
+	можно обращаться к ним как Node::ELEMENT_NODE , так же можно использовать в  switch/case. 
+
+
+#Revision: 1457
+	#Author: ctapmex Date: 2010-03-12 00:02:27 +0500 (Пт, 12 мар 2010)
 	1. поправил проект, брался не тот xmldom.h
 	2. вынес константы из класса Node . смысл их там хранить, да и еще статик? Плюс нет возможности
-	использовать их в select case
+	использовать их в switch case
 	3. в xmldom.h whitespace заменил на более информативное ignoreWhitespace
 
 #Revision: 1456
